hphp/hack/test/typecheck/unsafeexpr5.php.exp
File "unsafeexpr5.php", line 11, characters 8-13:
Typing error (Typing[4110])
File "unsafeexpr5.php", line 11, characters 8-9:
Expected num because this is used in an arithmetic operation
File "unsafeexpr5.php", line 10, characters 12-17:
But got string
